--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanilla JS Alert</title>
+    <style>
+        body{
+            font-family: sans-serif;
+        }
+    </style>
     <link rel="stylesheet" type="text/css" href="./alert.css">
 </head>
 <body>
 <h1 id="demo-heading">Vanilla JS Alert modals</h1>
-<p>Simple function with endless possibilities.</p>
+<p>Simple alert function with endless possibilities.</p>
 <h2>Default close button</h2>
 <button onclick="show_alert('Default close button', 'Just a simple close button.')">Test default close button</button><br><br>
 <code>show_alert('Default close button', 'Just a simple close button.')</code>
