--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: sans-serif;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="./alert.css">
+    <link rel="stylesheet" type="text/css" href="./modal.css">
 </head>
 <body>
 <h1 id="demo-heading">Vanilla JS Alert modals</h1>
@@ -44,7 +44,6 @@
                 </div>
                 <div class="modal-buttons">
                     <button class="modal-button" id="modal-button-primary" onclick="document.getElementById('modal-alert').style.display = 'none';">Close</button>
-                    <button class="modal-button" id="modal-button-secondary" onclick=""></button>
                 </div>
             </div>
         </div>
